test/good/nullables/nested02.px

a: String?
print a == null

b: String?? = a
print b == a
print b == null
print b! == null
