test/bad/nullables/cmp04.px

Bool? b = null
Char? c = null
b is c
